// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package vaccel;

import "error.proto";

message GenopArg {
	uint32 argtype = 1;
	uint32 size = 2;
	bytes buf = 3;
	uint32 parts = 4;
	uint32 part_no = 5;
};

message GenopRequest {
	int64 session_id = 1;

	repeated GenopArg read_args = 2;
	repeated GenopArg write_args = 3;
};

message GenopResult {
	repeated GenopArg write_args = 1;
};

message GenopResponse {
	oneof result {
		VaccelError error = 1;
		GenopResult result = 2;
	}
};
